<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:context=".MainActivity"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Login Example"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="150dp"
        android:textSize="30dp"
        android:textColor="#fc0303">
    </TextView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="30dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="username: "
            android:textSize="20dp"
            android:textColor="#000000">
        </TextView>

        <EditText
            android:id="@+id/login_username_edt"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:hint="Enter Username Here">
        </EditText>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="password: "
            android:textSize="20dp"
            android:textColor="#000000">
        </TextView>

        <EditText
            android:id="@+id/login_password_edt"
            android:layout_width="wrap_content"
            android:inputType="textPassword"
            android:layout_height="50dp"
            android:hint="Enter Password Here">
        </EditText>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/login_login_btn"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:text="Login"
            android:textSize="20sp"
            android:textColor="#ffffff">
        </Button>

        <Button
            android:id="@+id/login_signup_btn"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="Signup"
            android:textSize="20sp"
            android:textColor="#ffffff">
        </Button>

    </LinearLayout>

    <Button
        android:id="@+id/btn_mean"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="mean"
        android:textSize="20sp"
        android:textStyle="bold" />


</androidx.appcompat.widget.LinearLayoutCompat>