...
            <!--                app:layout_constraintHorizontal_bias="0.044"-->
            <!--                app:layout_constraintStart_toStartOf="parent"-->
            <!--                app:layout_constraintTop_toTopOf="parent"-->
            <!--                app:layout_constraintVertical_bias="0.869" />-->

            <Button
                android:id="@+id/btn_chat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="307dp"
                android:layout_marginTop="94dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="75dp"
                android:backgroundTint="#1A2561"
                android:text="Chat"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_submit" />

            <Spinner
...
